Current version.  Fixed navburger being invisible, applied changes to navburger view. opening the navbar does not work on Firefox

--- a/Major-Project/styles.css
+++ b/Major-Project/styles.css
@@ -9,8 +9,8 @@
 
 
 
-  --mobile-screen-width: calc(27em * 2.5);
-  --mobile-burg-button-width: 2em;
+  --mobile-screen-width: calc(27em * 2.5); /*alsso fix @medias because for some reason, this didn't work there.  Should be 67.5 or 68 rounded up*/
+  --mobile-burg-button-width: 3em;
 }
 
 /* navigation menu setup */
@@ -86,20 +86,12 @@ body > *
 }
 
 /*seperate mobile navbar setup*/
-@media screen and (max-width: var(--mobile-screen-width))
+@media screen and (max-width: 68em)
 {
   body > *
   {
     margin-left: var(--mobile-burg-button-width); /*buffer for navbuger*/
   }
-  
-  /*navbar list setup*/
-  .mob_navbar_open
-  {
-    display: none;
-  }
-
-  /**/
 
   .navburger
   {
@@ -111,7 +103,7 @@ body > *
     width: var(--mobile-burg-button-width);
     
     /* position burger to be in center */
-    display: flexbox;
+    display: flex;
     align-items:center;
     text-orientation: sideways;
     
@@ -119,6 +111,7 @@ body > *
     background-color: var(--navigation-color-background);
     border-color: var(--navigation-article-color-blend);
     border-style:none groove none none;
+    padding:0 15px 0 5px;
     border-width: 15px;
   }
 
